Check MP-safety in ifa_insert and ifa_remove only for IFEF_MPSAFE drivers

Eventually the assertions should pass for all drivers, however, at this point
it's too eager.

Fix PR kern/52895